# dataops-ml-pipeline

./: .env.example  .gitignore  Pipfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
core/: config.py  database.py
core/etl/: load_data.py
datasets/nyc_taxi/dbt/: .user.yml  profiles.yml
datasets/nyc_taxi/dbt/nyc_taxi/: .user.yml  dbt_project.yml
datasets/nyc_taxi/dbt/nyc_taxi/models/staging/: schema.yml  stg_yellow_taxi.sql
datasets/nyc_taxi/etl/: load_data.py
datasets/nyc_taxi/pipelines/: load_data.py
orchestration/: Dockerfile
orchestration/dags/: nyc_taxi_etl.py
scripts/: airflow-entrypoint.sh  init-postgres.sql  install-airflow.sh
src/: config.py  etl.py
src/core/: config.py  database.py
src/core/etl/: load_data.py
src/dbt/: etl.py
src/pipeline/dags/: nyc_taxi_alt_dag.py  nyc_taxi_dag.py
